--- a/index.html
+++ b/index.html
@@ -230,53 +230,41 @@
 
           <div class="flex flex-row">
             <div class="flex flex-column left-container">
-              <div class="flex top-border coupled-articles-container" id="coupled-articles-container">
-                <div class="flex flex-column coupled-articles-left-article-container
-                coupled-articles-article-container">
-                  <span class="top-writing-styling">
+              <div class="grid coupled-articles-container" id="coupled-articles-container">
+                <div class="grid coupled-articles-left-article-container
+                coupled-articles-article-container" id="coupled-articles-article-one">
+                  <span class="top-writing-styling coupled-articles-top-writing">
                     LOREM IPSUM
                   </span>
                   <h2 class="coupled-articles-title">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
                   </h2>
-                  <div class="flex flex-row coupled-articles-image-and-comment-container">
-                    <figure class="coupled-articles-figure">
-                      <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="coupled-articles-image">
-                    </figure>
-                    <div class="coupled-articles-image-comment-container">
-                      <p class="attribution-colour-and-font-style coupled-articles-text-font-size
-                      coupled-articles-attribution">
-                        di Lorem Ipsum
-                      </p>
-                      <p class="coupled-articles-text-font-size">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
-                      </p>
-                    </div>
-                  </div>
+                  <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="coupled-articles-image">
+                  <p class="attribution-colour-and-font-style coupled-articles-text-font-size
+                  coupled-articles-attribution">
+                    di Lorem Ipsum
+                  </p>
+                  <p class="coupled-articles-text-font-size coupled-articles-extra-info">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                  </p>
                 </div>
 
-                <div class="flex flex-column coupled-articles-right-article-container
-                coupled-articles-article-container">
-                <span class="top-writing-styling">
-                  LOREM IPSUM
-                </span>
+                <div class="grid coupled-articles-right-article-container coupled-articles-article-container"
+                id="coupled-articles-article-two">
+                  <span class="top-writing-styling coupled-articles-top-writing">
+                    LOREM IPSUM
+                  </span>
                   <h2 class="coupled-articles-title">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
                   </h2>
-                  <div class="flex flex-row coupled-articles-image-and-comment-container">
-                    <figure class="coupled-articles-figure">
-                      <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="coupled-articles-image">
-                    </figure>
-                    <div class="coupled-articles-image-comment-container">
-                      <p class="attribution-colour-and-font-style coupled-articles-text-font-size
-                      coupled-articles-attribution">
-                        di Lorem Ipsum
-                      </p>
-                      <p class="coupled-articles-text-font-size">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
-                      </p>
-                    </div>
-                  </div>
+                  <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="coupled-articles-image">
+                  <p class="attribution-colour-and-font-style coupled-articles-text-font-size
+                  coupled-articles-attribution">
+                    di Lorem Ipsum
+                  </p>
+                  <p class="coupled-articles-text-font-size coupled-articles-extra-info">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
+                  </p>
                 </div>
               </div>
 
