--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                   coupled-articles-attribution">
                     di Lorem Ipsum
                   </p>
-                  <p class="coupled-articles-text-font-size coupled-articles-extra-info">
+                  <p class="coupled-articles-text-font-size coupled-articles-extra-info disappearing-element-small">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
                   </p>
                 </div>
@@ -262,7 +262,7 @@
                   coupled-articles-attribution">
                     di Lorem Ipsum
                   </p>
-                  <p class="coupled-articles-text-font-size coupled-articles-extra-info">
+                  <p class="coupled-articles-text-font-size coupled-articles-extra-info disappearing-element-small">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
                   </p>
                 </div>
